# crypto-alpha

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.specify/: feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: generic.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
scripts/scoring/: __init__.py  confluence.py  decimal_format.py  regime_classifier.py  risk_plan.py  score.py  strategy_version.py
scripts/validation/: validate_data_layer.py  validate_scoring.py
specs/001-profitable-trading-decision-domain/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-profitable-trading-decision-domain/checklists/: requirements.md
specs/002-data-layer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-data-layer/checklists/: requirements.md
specs/002-data-layer/contracts/: snapshot.schema.json  trading-universe.schema.json  watchlist-asset.schema.json
specs/002-data-layer/fixtures/: btc-perp-snapshot.json  eth-perp-snapshot.json  sol-perp-snapshot.json
specs/003-scoring-engine-v1/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-scoring-engine-v1/checklists/: requirements.md
specs/003-scoring-engine-v1/contracts/: confidence-score.schema.json  risk-plan.schema.json  scoring-output.schema.json
tests/scoring/: __init__.py  test_confluence.py  test_regime_classifier.py  test_risk_plan.py  test_score.py  test_strategy_version.py
(+3 files in other folders)
